added home.scss and posts.css, applied styles to headers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,12 @@
   </head>
 
   <header>
-    <li><%= link_to 'Top', '/' %></li>
-    <li><%= link_to 'About', '/about' %></li>
-    <li><%= link_to 'Posts', '/posts/index' %></li>
+		<div class="header-logo"></div>
+		<div class="header-menus">
+			<li><%= link_to 'Top', '/' %></li>
+	    <li><%= link_to 'About', '/about' %></li>
+  	  <li><%= link_to 'Posts', '/posts/index' %></li>
+		</div>
   </header>
   <body>
     <%= yield %>
