--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,8 @@
-<h1>Home#about</h1>
-<p>Find me in app/views/home/about.html.erb</p>
+<div class="about-main">
+	<h2>TweetAppとは</h2>
+	<p>
+		SNSサービスです。
+    近況やつぶやきを投稿し、他のユーザーと楽しくコミュニケーションできます。
+	</p>
+	<img class="about-img" src="/tweets.png">
+</div>
