added popup confirmation on delete

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,8 +9,11 @@
 			<div class="post-time"><%= @post.created_at %></div>
 			<div>
 				<%= link_to 'Edit', "/posts/#{@post.id}/edit" %>
+				<%= link_to 'Delete', "/posts/#{@post.id}/destroy", method: :post, data: {confirm: 'Are you sure?'} %>
 			</div>
-			<div></div>
+			<div>
+				
+			</div>
 		</div>
 	</div>
 </div>
