updated users#new view with more appropriate lable and input tagging, a bug fixed on users#index view

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 	<div class="container">
 		<h1 class="users_heading">Users List</h1>
 		<% @users.each do |user| %>
-			<div class="users_index-item">
+			<div class="users-index-item">
 				<div class="user-left">
 					<img src="">
 				</div>
